# ayed

./: .gitignore  Cargo.toml  dummy.txt  ideas-for-config-file.txt
ayed-config-parser/src/: ast.rs  error.rs  parser.rs
ayed-core/: Cargo.toml
ayed-gtk/: Cargo.toml
ayed-nucore/: Cargo.toml
ayed-regex/: Cargo.toml
ayed-tui/: Cargo.toml  stderr.txt
crates/ayed-core/: Cargo.toml
crates/ayed-core/src/: arena.rs  config.rs  core.rs  event.rs  highlight.rs  input.rs  input_mapper.rs  lib.rs  position.rs  selection.rs  shared.rs  state.rs
crates/ayed-core/src/command/: commands.rs  helpers.rs  mod.rs  options.rs
crates/ayed-core/src/commands/: completions.rs  config.rs  core.rs  editor.rs  lsp.rs  misc.rs  mod.rs
crates/ayed-core/src/config/: applied_config.rs  builtin.ayedconf  commands.rs  mod.rs  theme.ayedconf
crates/ayed-core/src/controls/: text_edit.rs
crates/ayed-core/src/operations/: file.rs
crates/ayed-core/src/panels/: combo.rs  completions.rs  editor.rs  file_picker.rs  hover_info.rs  line_numbers.rs  mod.rs  modeline.rs  suggestions.rs  warpdrive.rs
crates/ayed-core/src/state/: completions.rs  highlight.rs  mod.rs  register.rs  resources.rs  suggestions.rs  text_buffer.rs  text_buffer_history.rs  view.rs
crates/ayed-core/src/text_buffer/: commands.rs
crates/ayed-core/src/ui/: layout.rs  mod.rs  style.rs  theme.rs
crates/ayed-core/src/ui/ui_state/: mod.rs
crates/ayed-core/src/utils/: mod.rs  path_ext.rs  render_utils.rs
crates/ayed-core/src/utils/string_utils/: grid_string_builder.rs  line_builder.rs  mod.rs  ops.rs
(+124 files in other folders)
