[package]
name = "ayed-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ayed-config-parser = { path = "../ayed-config-parser" }
ayed-lsp-client = { path = "../ayed-lsp-client" }

regex = "1.9.5"
